# kebab

./: .gitignore  .gitmodules  BENCHMARK_OUTPUT_GUIDE.md  CONFIG_SYSTEM_GUIDE.md  DEVELOPMENT_STATUS.md  FINAL_STATUS.md  GEMM_ANALYSIS_SUMMARY.md  GEMM_OPTIMIZATION_RECOMMENDATIONS.md  KERNEL_COMPARISON_TABLE.md  LICENSE  Makefile  README.md  STATUS_UPDATE.md  SUMMARY.md  TASKS_QUICK_REF.md  TESTING.md  V18_IMPLEMENTATION_PLAN.md  VERBOSE_COMPARISON_GUIDE.md  VERBOSE_MODE_GUIDE.md  WGMMA_STATUS.md  analysis_gemm_features.md  config.yaml  config.yaml.bak  config.yaml.bak_compare_20260227  config.yaml.bak_v17_20260227  cutlass_meta_probe  sparse_mma_demo  sparse_mma_demo.cu.bak_20260116
.claude/skills/: README.md
.github/skills/kebab-benchmark-and-run/: SKILL.md
.github/skills/kebab-build-and-env/: SKILL.md
.github/skills/kebab-codebase-navigation/: SKILL.md
.github/skills/kebab-gemm-config-tuning/: SKILL.md
baselines/cuda/: cuda_elementwise_add.cu  cuda_elementwise_add.h  cuda_gemm.cu  cuda_gemm.h
bench_results/: elementwise_add_results.csv  gemm_results_float.csv  gemm_results_half.csv  gemm_results_half_cuda.csv  gemm_results_half_cute.csv  summary.md
benchmarks/: bench_elementwise_add.cu  bench_gemm.cu  benchmark_runner.cpp  benchmark_runner.h  test_benchmark_runner.cu
docs/: CLEANUP_SUMMARY.md  CUTE_GEMM_IMPLEMENTATION.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_BASELINE.md  TASK_ROADMAP.md  TMA_IMPLEMENTATION_SUMMARY.md  WGMMA_ATOM_SELECTION.md
docs/fixes/: CUDA_AUTO_DETECTION.md  CUDA_DETECTION_FIX.md  CUDA_VERSION_FIX.md  DEFAULT_SIZES_UPDATE.md  PROFILING_FIX.md  PROFILING_FIX_SUMMARY.md
kebab/: CMakeLists.txt  README.md
kebab/include/kebab/: kebab.h
kebab/include/kebab/config/: config_parser.h
kebab/include/kebab/cuda/: cuda_gemm.h  cuda_kernel_utils.h
kebab/include/kebab/cute/: elementwise_add.h  gemm.h
kebab/include/kebab/utils/: benchmark.h  cublas_reference.h  data_size.h  matrix_init.h  matrix_print.h  reference_gemm.h
kebab/include/microbench/: microbench.h
kebab/lib/: CMakeLists.txt
kebab/lib/benchmark/: CMakeLists.txt  bench_elementwise_add.cu  bench_gemm.cu  benchmark_runner.cpp  runonce_elementwise_add.cu  runonce_elementwise_add_ref.cu  runonce_gemm.cu  runonce_gemm_cuda.cu  runonce_gemm_ref.cu  test_benchmark_runner.cu
kebab/lib/common/: config_parser.cpp
kebab/lib/cuda/: cuda_elementwise_add.cu  cuda_gemm.cu  cuda_gemm_v10_tmastore.cu  cuda_gemm_v10_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler_ptxbarrier_tma5d_cluster_multicast_tmastore.cu  cuda_gemm_v11_hilbert.cu  cuda_gemm_v11_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler_ptxbarrier_tma5d_cluster_multicast_tmastore_hilbert.cu  cuda_gemm_v12_stmatrix.cu  cuda_gemm_v12_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler_ptxbarrier_tma5d_cluster_multicast_tmastore_hilbert_stmatrix_padded.cu  cuda_gemm_v13_wgmma_tma_warpspecialized_persistent_tilescheduler_ptxbarrier_tma2d.cu  cuda_gemm_v14_wgmma_tma_warpspecialized_persistent_ptxbarrier_tmastore_hilbert_stmatrix_padded_nocluster.cu  cuda_gemm_v15_stmatrix_nopersistent.cu  cuda_gemm_v15_wgmma_tma_warpspecialized_ptxbarrier_tmastore_hilbert_stmatrix_padded_nocluster_nopersistent.cu  cuda_gemm_v16_stmatrix_linear_schedule.cu  cuda_gemm_v16_wgmma_tma_warpspecialized_persistent_ptxbarrier_tmastore_hilbert_stmatrix_padded_nocluster_linearschedule.cu  cuda_gemm_v17_wgmma_tma_warpgroup_ptxbarrier.cu  cuda_gemm_v18_wgmma_tma_warpgroup_warpspecialized_persistent_stmatrix.cu  cuda_gemm_v19_wgmma_tma_warpgroup_warpspecialized_persistent_hilbert.cu  cuda_gemm_v1_warptiling.cu  cuda_gemm_v1_warptiling_baseline.cu  cuda_gemm_v2_wgmma_tma.cu  cuda_gemm_v3_warpgroup.cu  cuda_gemm_v3_wgmma_tma_warpgroup.cu  cuda_gemm_v40_wgmma_tma_warpgroup_warpspecialized_eventfix.cu  cuda_gemm_v41_wgmma_tma_warpgroup_warpspecialized_rowmajor.cu  cuda_gemm_v4_warpspec.cu  cuda_gemm_v4_wgmma_tma_warpgroup_warpspecialized.cu  cuda_gemm_v5_persistent.cu  cuda_gemm_v5_wgmma_tma_warpgroup_warpspecialized_persistent.cu  cuda_gemm_v6_persistent_tiling.cu  cuda_gemm_v6_ptxbarrier.cu  cuda_gemm_v6_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler.cu  cuda_gemm_v7_cluster.cu  cuda_gemm_v7_ptxbarrier_5dtma.cu  cuda_gemm_v7_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler_ptxbarrier_tma5d.cu  cuda_gemm_v8_cluster_multicast.cu  cuda_gemm_v8_multicast.cu  cuda_gemm_v8_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler_ptxbarrier_tma5d_cluster_multicast.cu  cuda_gemm_v9_streamstore.cu  cuda_gemm_v9_wgmma_tma_warpgroup_warpspecialized_persistent_tilescheduler_ptxbarrier_tma5d_cluster_multicast_streamstore.cu
kebab/lib/cute/: cute_elementwise_add.cu  cute_gemm.cu  cute_gemm_wgmma.cu  cute_gemm_wgmma_tma.cu  cute_gemm_wgmma_tma_v3.cu  gemm.cu  gemm_wgmma.cu  gemm_wgmma_tma.cu
kebab/lib/examples/: CMakeLists.txt  simple_gemm.cu
kebab/lib/microbench/: CMakeLists.txt  copy_gmem_to_smem.cu  copy_gmem_to_smem_2d_cp_async.cu  copy_gmem_to_smem_2d_tiling.cu  copy_gmem_to_smem_2d_tma_cde.cu  copy_gmem_to_smem_2d_tma_cute.cu  copy_gmem_to_smem_2d_tma_ptx.cu  cutlass_meta_probe.cu  hgemm_wgmma.cu  mbench_copy_gmem_to_smem.cu  microbench.cpp  mma_mma_sync.cu  mma_wgmma.cu  mma_wmma_sync.cu  sparse_mma.cu  stmatrix_probe.cu  wgmma_descriptor_info.cu  wgmma_mma.cu
kebab/lib/tools/: CMakeLists.txt  test_cuda_auto_detection.sh  test_cuda_detection.sh
profiling/: gemm_bottleneck_analysis.md  gemm_further_optimization_summary.md  gemm_optimization_analysis.md  gemm_profile.ncu-rep  gemm_summary.txt
scripts/: autotune_gemm.py  diagnose_profiling.sh  generate_report.py  profile_gemm.sh  test_profiling_fix.sh  test_simple_profiling.sh  validate_copilot_skills.sh  verify_cute_implementation.sh
src/config/: config_parser.cpp
src/operators/: README_GEMM_CUTE.md  elementwise_add.cu  gemm.cu  gemm_wgmma.cu  gemm_wgmma_tma.cu
tests/: test_config_parser.cpp  test_cuda_baseline_elementwise_add.cpp  test_elementwise_add.cpp  test_gemm.cpp  test_gemm_performance.cpp
(+10 files in other folders)
